--- a/.github/workflows/toolkit-image.yml
+++ b/.github/workflows/toolkit-image.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -52,11 +52,14 @@ jobs:
         with:
           context: "{{defaultContext}}:toolkit"
           platforms: |
+            linux/386
             linux/amd64
-            linux/arm64
             linux/arm/v6
             linux/arm/v7
-            darwin
+            linux/arm64/v8
+            linux/ppc64le
+            linux/riscv64
+            linux/s390x
           push: true
           build-args: |
             APP_NAME=${{ env.APP_NAME }}
