--- a/.github/workflows/nezha-dashboard-image.yml
+++ b/.github/workflows/nezha-dashboard-image.yml
@@ -56,7 +56,7 @@ jobs:
           dest: dist
           pkg: cmd/dashboard
           prefix: dashboard
-          targets: linux/amd64,linux/arm64,linux/arm-7,linux/s390x,linux/riscv64,windows/amd64,windows/386,windows/arm64,linux/386,
+          targets: linux/386,linux/amd64,linux/arm64,linux/arm-7,linux/ppc64le
           v: true
           x: false
           race: false
