--- a/.github/workflows/libstrm-image.yaml
+++ b/.github/workflows/libstrm-image.yaml
@@ -50,8 +50,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./Dockerfile
+          context: "{{defaultContext}}:libstrm"
           platforms: |
             linux/386
             linux/amd64
