--- a/libstrm/Dockerfile
+++ b/libstrm/Dockerfile
@@ -1,9 +1,13 @@
-FROM python:alpine
+FROM alpine:edge
 
 RUN apk update && apk add --no-cache \
+    python3 \
+    py3-pip \
+    py3-setuptools \
     rclone \
     tar \
-    kubectl
+    kubectl \
+    fuse3
 
 COPY . /app
 
