--- a/embyserver/Dockerfile
+++ b/embyserver/Dockerfile
@@ -6,10 +6,11 @@ RUN apt-get update && apt-get install -y \
 
 FROM amilys/embyserver_arm64v8:4.8.7.0
 
-COPY --from=base /usr/bin/fuse /usr/bin/fuse
+# COPY --from=base /usr/bin/fuse /usr/bin/fuse
 # COPY --from=base /dev/fuse /dev/fuse
 COPY --from=base /etc/fuse.conf /etc/fuse.conf
+COPY --from=base /usr/sbin/mount.fuse /usr/sbin/mount.fuse
 COPY --from=base /usr/bin/fusermount /usr/bin/fusermount
 COPY --from=base /usr/bin/rclone /usr/bin/rclone
 
-RUN chmod +x /usr/bin/fuse /usr/bin/rclone /usr/bin/fusermount
+RUN chmod +x /usr/sbin/mount.fuse /usr/bin/rclone /usr/bin/fusermount
