--- a/toolkit/Dockerfile
+++ b/toolkit/Dockerfile
@@ -6,7 +6,8 @@ RUN apk update && apk add --no-cache \
     tar \
     mysql-client \
     rclone \
-    kubectl
+    kubectl \
+    mariadb-connector-c-dev
 RUN setup-timezone -z $TZ
 RUN mkdir -p /root/.config/rclone/
 RUN mkdir -p /workspace/scripts
